# hermes

./: .gitignore  Cargo.toml  config.template.ron  readme.md
.github/workflows/: lint.yml
migrations/: 20240910202735_Add_notes_table.sql  20240917141047_add_user_table.sql  20240917141351_add_notes_table.sql  20240917141807_add_entries_table.sql  20240926170820_add_views.sql
src/: config.rs  filters.rs  main.rs  models.rs  user.rs
src/web/: app.rs  auth.rs  mod.rs  notes.rs
templates/: base.html  index.html  login.html  nav.html  note.html  notes.html  register.html  sakura-vader.html
