[package]
name = "hermes"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/imvaskel/hermes"

[dependencies]
askama = "0.12.1"
askama_axum = "0.4.0"
async-trait = "0.1.82"
axum = "0.7.5"
axum-htmx = "0.6.0"
axum-login = "0.16.0"
color-eyre = "0.6.3"
comrak = "0.28.0"
eos = { git = "https://github.com/Rapptz/eos", version = "0.1.0", features = ["macros"] }
password-auth = "1.0.0"
ron = "0.8.1"
serde = { version = "1.0.210", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["macros", "runtime-tokio", "sqlite", "derive"] }
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
tower-sessions = { version = "0.13.0", features = ["signed"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.10.0", features = ["v4"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.12.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
